# All generated outfits should be tossed in here so that the
# other scripts can be happy with it
gen_outfits = []

subdir('bioship')
subdir('generated')

outfit_sources = files(
  'accessory/air_freshener.xml',
  'accessory/black_cat_doll.xml',
  'accessory/broken_nebular_shielding_prototype.xml',
  'accessory/commemorative_stein.xml',
  'accessory/cyborg_feather.xml',
  'accessory/fancy_key_chain.xml',
  'accessory/fuzzy_dice.xml',
  'accessory/goatee_marker.xml',
  'accessory/handbook_for_dvaered_good_manners.xml',
  'accessory/jacks_eyepatch.xml',
  'accessory/left_boot.xml',
  'accessory/love_letter.xml',
  'accessory/pentagram_of_valor.xml',
  'accessory/pilot_doll.xml',
  'accessory/racing_trophy.xml',
  'accessory/rackhams_razor.xml',
  'accessory/sandwich_holder.xml',
  'accessory/satellite_mockup.xml',
  'accessory/star_of_valor.xml',
  'accessory/swamp_bombing.xml',
  'accessory/toy_drone.xml',
  'accessory/trading_card_common.xml',
  'accessory/trading_card_rare.xml',
  'accessory/trading_card_uncommon.xml',
  'accessory/ugly_statue.xml',
  'accessory/vacuum_cleaner.xml',
  'core_hull/medium/krain_nanotubes_foam_padding.xml',
  'core_hull/medium/nexus_ghost_weave.xml',
  'core_hull/medium/patchwork_medium_plating.xml',
  'core_hull/medium/rs_medium_cargo_hull.xml',
  'core_hull/medium/sk_battle_plating.xml',
  'core_hull/medium/sk_medium_cargo_hull.xml',
  'core_hull/medium/unicorp_d23_medium_plating.xml',
  'core_hull/small/nexus_shadow_weave.xml',
  'core_hull/small/patchwork_light_plating.xml',
  'core_hull/small/rs_small_cargo_hull.xml',
  'core_hull/small/sk_skirmish_plating.xml',
  'core_hull/small/sk_small_cargo_hull.xml',
  'core_hull/small/unicorp_d2_light_plating.xml',
  'core_hull/large/nexus_phantasm_weave.xml',
  'core_hull/large/patchwork_heavy_plating.xml',
  'core_hull/large/rs_large_cargo_hull.xml',
  'core_hull/large/sk_large_cargo_hull.xml',
  'core_hull/large/sk_war_plating.xml',
  'core_hull/large/unicorp_d58_heavy_plating.xml',
  'maps/local_system_map.xml',
  'maps/map_collective_space.xml',
  'maps/map_dvaered_core.xml',
  'maps/map_empire-soromid_trade_route.xml',
  'maps/map_empire_core.xml',
  'maps/map_flf-pirate_route.xml',
  'maps/map_flf_hidden_jumps.xml',
  'maps/map_inner_nebula_secret_jump.xml',
  'maps/map_kretoggs_hypergate.xml',
  'maps/map_kretoggs_secrets.xml',
  'maps/map_nebula_edge.xml',
  'maps/map_new_havens_secrets.xml',
  'maps/map_pirate_strongholds.xml',
  'maps/map_qorel_tunnel.xml',
  'maps/map_sirian_border_systems.xml',
  'maps/map_sirius_core.xml',
  'maps/map_sol.xml',
  'maps/map_the_frontier.xml',
  'maps/map_thurion_core.xml',
  'maps/map_zalek_core.xml',
  'maps/ultra_map.xml',
  'launchers/convulsion_launcher.xml',
  'launchers/electron_burst_cannon.xml',
  'launchers/emp_grenade_launcher.xml',
  'launchers/enygma_systems_huntsman_launcher.xml',
  'launchers/enygma_systems_spearhead_launcher.xml',
  'launchers/enygma_systems_turreted_fury_launcher.xml',
  'launchers/enygma_systems_turreted_headhunter_launcher.xml',
  'launchers/pincushion_battery.xml',
  'launchers/repeating_banshee_launcher.xml',
  'launchers/shatterer_launcher.xml',
  'launchers/space_mine_layer.xml',
  'launchers/superfast_collider_launcher.xml',
  'launchers/teracom_banshee_launcher.xml',
  'launchers/teracom_fury_launcher.xml',
  'launchers/teracom_headhunter_launcher.xml',
  'launchers/teracom_imperator_launcher.xml',
  'launchers/teracom_mace_launcher.xml',
  'launchers/teracom_medusa_launcher.xml',
  'launchers/teracom_vengeance_launcher.xml',
  'launchers/turreted_convulsion_launcher.xml',
  'launchers/unicorp_caesar_iv_launcher.xml',
  'launchers/unicorp_storm_launcher.xml',
  'launchers/zalek_hunter_launcher.xml',
  'launchers/zalek_reaper_launcher.xml',
  'flow/astral_flow_amplifier.xml',
  'flow/internal_flow_amplifier.xml',
  'flow/structure/large_flow_amplifier.xml',
  'flow/structure/large_flow_resonator.xml',
  'flow/structure/large_meditation_chamber.xml',
  'flow/structure/medium_flow_amplifier.xml',
  'flow/structure/medium_flow_resonator.xml',
  'flow/structure/medium_meditation_chamber.xml',
  'flow/structure/small_flow_amplifier.xml',
  'flow/structure/small_flow_resonator.xml',
  'flow/structure/small_meditation_chamber.xml',
  'pointdefense/dvaered_flare_battery.xml',
  'pointdefense/guardian_interception_system.xml',
  'pointdefense/guardian_overseer_system.xml',
  'pointdefense/ratchet_point_defense.xml',
  'pointdefense/spittle_tubuloid_cluster.xml',
  'pointdefense/zibs-16.xml',
  'pointdefense/zibs-32.xml',
  'core_engine/medium/beat_up_medium_engine.xml',
  'core_engine/medium/krain_patagium_twin_engine.xml',
  'core_engine/medium/melendez_buffalo_engine.xml',
  'core_engine/medium/nexus_arrow_700_engine.xml',
  'core_engine/medium/tricon_cyclone_engine.xml',
  'core_engine/medium/unicorp_falcon_700_engine.xml',
  'core_engine/small/beat_up_small_engine.xml',
  'core_engine/small/melendez_ox_engine.xml',
  'core_engine/small/nexus_dart_160_engine.xml',
  'core_engine/small/tricon_zephyr_engine.xml',
  'core_engine/small/unicorp_hawk_160_engine.xml',
  'core_engine/small/zalek_test_engine.xml',
  'core_engine/large/beat_up_large_engine.xml',
  'core_engine/large/krain_remige_engine.xml',
  'core_engine/large/melendez_mammoth_engine.xml',
  'core_engine/large/nexus_bolt_3000_engine.xml',
  'core_engine/large/tricon_typhoon_engine.xml',
  'core_engine/large/unicorp_eagle_3000_engine.xml',
  'fighter_bays/drone_bay.xml',
  'fighter_bays/empire_lancelot_bay.xml',
  'fighter_bays/hyena_bay.xml',
  'fighter_bays/hyena_dock.xml',
  'fighter_bays/lancelot_bay.xml',
  'fighter_bays/pirate_hyena_bay.xml',
  'fighter_bays/pirate_hyena_dock.xml',
  'fighter_bays/proteron_dalton_bay.xml',
  'fighter_bays/proteron_dalton_dock.xml',
  'fighter_bays/sirius_fidelity_bay.xml',
  'fighter_bays/sirius_shaman_bay.xml',
  'fighter_bays/soromid_brigand_bay.xml',
  'fighter_bays/thurion_perspicacity_bay.xml',
  'fighter_bays/thurion_perspicacity_dock.xml',
  'fighter_bays/thurion_scintillation_bay.xml',
  'fighter_bays/zalek_bomber_drone_bay.xml',
  'fighter_bays/zalek_bomber_drone_mini_bay.xml',
  'fighter_bays/zalek_heavy_drone_bay.xml',
  'fighter_bays/zalek_heavy_drone_mini_bay.xml',
  'fighter_bays/zalek_light_drone_bay.xml',
  'fighter_bays/zalek_light_drone_mini_bay.xml',
  'structure/active_plating.xml',
  'structure/adaptive_camouflage_plating.xml',
  'structure/auxiliary_processing_unit_i.xml',
  'structure/auxiliary_processing_unit_ii.xml',
  'structure/auxiliary_processing_unit_iii.xml',
  'structure/auxiliary_processing_unit_iv.xml',
  'structure/battery_i.xml',
  'structure/battery_ii.xml',
  'structure/battery_iii.xml',
  'structure/battery_iv.xml',
  'structure/biometal_armour.xml',
  'structure/compact_lightsail.xml',
  'structure/engine_reroute.xml',
  'structure/improved_stabilizer.xml',
  'structure/large_cargo_pod.xml',
  'structure/large_fuel_pod.xml',
  'structure/large_shield_booster.xml',
  'structure/medium_cargo_pod.xml',
  'structure/medium_fuel_pod.xml',
  'structure/medium_shield_booster.xml',
  'structure/microbond_plating.xml',
  'structure/nanobond_plating.xml',
  'structure/nanofiber_structural_enhancement.xml',
  'structure/nebular_shielding_prototype.xml',
  'structure/plasteel_plating.xml',
  'structure/reactor_class_i.xml',
  'structure/reactor_class_ii.xml',
  'structure/reactor_class_iii.xml',
  'structure/shield_capacitor_i.xml',
  'structure/shield_capacitor_ii.xml',
  'structure/shield_capacitor_iii.xml',
  'structure/shield_capacitor_iv.xml',
  'structure/small_cargo_pod.xml',
  'structure/small_fuel_pod.xml',
  'structure/small_shield_booster.xml',
  'core_system/medium/milspec_aegis_4701_core_system.xml',
  'core_system/medium/milspec_orion_4801_core_system.xml',
  'core_system/medium/milspec_prometheus_4703_core_system.xml',
  'core_system/medium/milspec_thalos_4702_core_system.xml',
  'core_system/medium/previous_generation_medium_systems.xml',
  'core_system/medium/unicorp_pt200_core_system.xml',
  'core_system/small/milspec_aegis_2201_core_system.xml',
  'core_system/small/milspec_orion_2301_core_system.xml',
  'core_system/small/milspec_prometheus_2203_core_system.xml',
  'core_system/small/milspec_thalos_2202_core_system.xml',
  'core_system/small/previous_generation_small_systems.xml',
  'core_system/small/unicorp_pt16_core_system.xml',
  'core_system/large/milspec_aegis_8501_core_system.xml',
  'core_system/large/milspec_orion_8601_core_system.xml',
  'core_system/large/milspec_prometheus_8503_core_system.xml',
  'core_system/large/milspec_thalos_8502_core_system.xml',
  'core_system/large/previous_generation_large_systems.xml',
  'core_system/large/unicorp_pt440_core_system.xml',
  'utility/apollos_gaze.xml',
  'utility/asteroid_scanner.xml',
  'utility/berserk_chip.xml',
  'utility/blink_drive.xml',
  'utility/boarding_androids_mk1.xml',
  'utility/boarding_androids_mk2.xml',
  'utility/cargo_damper.xml',
  'utility/catalytic_energy_drill.xml',
  'utility/cloaking_device.xml',
  'utility/combat_hologram_projector.xml',
  'utility/cryogenic_repair_nanobots.xml',
  'utility/droid_repair_crew.xml',
  'utility/emergency_shield_booster.xml',
  'utility/emergency_stasis_inducer.xml',
  'utility/flicker_drive.xml',
  'utility/hellburner.xml',
  'utility/hidden_jump_scanner.xml',
  'utility/hyperbolic_blink_engine.xml',
  'utility/jump_scanner.xml',
  'utility/kratos_glove.xml',
  'utility/low_radiation_sensor_modulator.xml',
  'utility/milspec_jammer.xml',
  'utility/milspec_scrambler.xml',
  'utility/neural_accelerator_interface.xml',
  'utility/sensor_array.xml',
  'utility/sk_heavy_plasma_drill.xml',
  'utility/sk_plasma_drill.xml',
  'utility/stealth_burster.xml',
  'utility/targeting_array.xml',
  'utility/targeting_conduit.xml',
  'utility/unicorp_jammer.xml',
  'utility/unicorp_light_afterburner.xml',
  'utility/unicorp_medium_afterburner.xml',
  'utility/unicorp_scrambler.xml',
  'utility/weakness_harmonizer_ai.xml',
  'utility/weapons_ionizer.xml',
  'utility/hullcoating/faraday_tempest_coating.xml',
  'utility/hullcoating/lattice_thermal_coating.xml',
  'utility/hullcoating/milspec_impacto-plastic_coating.xml',
  'utility/hullcoating/nebula_resistant_coating.xml',
  'utility/hullcoating/nexus_concealment_coating.xml',
  'utility/hullcoating/photovoltaic_nanobot_coating.xml',
  'utility/hullcoating/reconstructive_nanobot_coating.xml',
  'utility/combatai/agility_combat_ai.xml',
  'utility/combatai/bio-neural_combat_ai.xml',
  'utility/combatai/cyclic_combat_ai.xml',
  'utility/combatai/efficiency_combat_ai.xml',
  'utility/combatai/hive_combat_ai.xml',
  'utility/combatai/hunting_combat_ai.xml',
  'utility/combatai/pinpoint_combat_ai.xml',
  'utility/combatai/scanning_combat_ai.xml',
  'unique/bioship_pheromone_emitter.xml',
  'unique/daphnes_leap.xml',
  'unique/executor_shield_aura.xml',
  'unique/fake_transponder.xml',
  'unique/fuel_recycler.xml',
  'unique/fuelshell_plating.xml',
  'unique/hades_torch.xml',
  'unique/homebrew_processing_unit.xml',
  'unique/prototype_systems_t-iva_quickshell.xml',
  'unique/pulse_scanner.xml',
  'unique/squadron_synchronizer_module.xml',
  'unique/valkyrie_beam.xml',
  'unique/veil_of_penelope.xml',
  'unique/zd5_guardian_unit.xml',
  'weapons/antimatter_lance.xml',
  'weapons/arc_blade.xml',
  'weapons/arc_machete.xml',
  'weapons/disruptor_artillery_s1.xml',
  'weapons/disruptor_artillery_s2.xml',
  'weapons/disruptor_battery_s2.xml',
  'weapons/energy_harpoon.xml',
  'weapons/flak_gun.xml',
  'weapons/gauss_gun.xml',
  'weapons/grave_beam.xml',
  'weapons/grave_lance.xml',
  'weapons/heavy_ion_cannon.xml',
  'weapons/heavy_ion_turret.xml',
  'weapons/heavy_laser_turret.xml',
  'weapons/heavy_neutron_disruptor.xml',
  'weapons/heavy_ripper_cannon.xml',
  'weapons/heavy_ripper_turret.xml',
  'weapons/ion_cannon.xml',
  'weapons/laser_cannon_mk1.xml',
  'weapons/laser_cannon_mk2.xml',
  'weapons/laser_turret_mk1.xml',
  'weapons/laser_turret_mk2.xml',
  'weapons/mass_driver.xml',
  'weapons/mining_lance_mk1.xml',
  'weapons/mining_lance_mk2.xml',
  'weapons/neutron_disruptor.xml',
  'weapons/nexus_drill_lance.xml',
  'weapons/orion_beam.xml',
  'weapons/orion_lance.xml',
  'weapons/particle_beam.xml',
  'weapons/particle_lance.xml',
  'weapons/plasma_blaster_mk1.xml',
  'weapons/plasma_blaster_mk2.xml',
  'weapons/plasma_cannon.xml',
  'weapons/plasma_cluster_cannon.xml',
  'weapons/plasma_eruptor.xml',
  'weapons/plasma_turret_mk1.xml',
  'weapons/plasma_turret_mk2.xml',
  'weapons/ragnarok_beam.xml',
  'weapons/railgun.xml',
  'weapons/railgun_turret.xml',
  'weapons/razor_artillery_s1.xml',
  'weapons/razor_artillery_s2.xml',
  'weapons/razor_artillery_s3.xml',
  'weapons/razor_battery_s2.xml',
  'weapons/repeating_railgun.xml',
  'weapons/ripper_cannon.xml',
  'weapons/shredder.xml',
  'weapons/turbolaser.xml',
  'weapons/turreted_gauss_gun.xml',
  'weapons/turreted_vulcan_gun.xml',
  'weapons/vulcan_gun.xml',
  'misc/counterfeit_heavy_combat_vessel_license.xml',
  'misc/counterfeit_heavy_weapon_license.xml',
  'misc/heavy_combat_vessel_license.xml',
  'misc/heavy_weapon_license.xml',
  'misc/large_civilian_vessel_license.xml',
  'misc/light_combat_vessel_license.xml',
  'misc/medium_combat_vessel_license.xml',
  'misc/medium_weapon_license.xml',
  'misc/mercenary_license.xml',
  'misc/mystery_outfit.xml',
  'misc/treasure_map.xml',
  'intrinsic/black_agate_finishing.xml',
  'intrinsic/escape_pod.xml',
  'intrinsic/gauntlet_deluxe.xml',
  'intrinsic/gauntlet_supreme.xml',
  'intrinsic/hyperdrive_retool.xml',
  'intrinsic/machiavellian_fortune.xml',
  'intrinsic/machiavellian_necessity.xml',
  'intrinsic/machiavellian_virtue.xml',
  'intrinsic/port_and_polish.xml',
  'intrinsic/wild_space_taint.xml',
)
