lua_source = files(
   'equipopt/optimize.lua',
   'escort.lua',
   'fleet.lua',
   'format.lua',
   'lazyload.lua',
   'linenoise.lua',
   'lmisn.lua',
   'lmusic.lua',
   'love_shaders.lua',
   'portrait.lua',
   'pp_shaders.lua',
   'prng.lua',
   'proximity.lua',
   'swapship.lua',
   'vn.lua',
   'vntk.lua',
)
