lua_source = files(
   'cinema.lua',
   'equipopt/optimize.lua',
   'escort.lua',
   'fleet.lua',
   'format.lua',
   'lazyload.lua',
   'linenoise.lua',
   'lmisn.lua',
   'lmusic.lua',
   'love_shaders.lua',
   #'luatk/core.lua',
   'pilotai.lua',
   'portrait.lua',
   'prob.lua',
   'pp_shaders.lua',
   'prng.lua',
   'proximity.lua',
   'swapship.lua',
   'vn/core.lua',
   'vntk.lua',
)
