[package]
name = "pluginmgr-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Naev Plugin Manager"
license = "GPL-3.0-or-later"
authors = ["Naev DevTeam & contributors"]

[dependencies]
pluginmgr = { path = "../pluginmgr" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
