root = meson.project_source_root()
naevpedia_outfits_sources = files(
   root / 'dat/outfits/accessory/air_freshener.xml',
   root / 'dat/outfits/accessory/black_cat_doll.xml',
   root / 'dat/outfits/accessory/broken_nebular_shielding_prototype.xml',
   root / 'dat/outfits/accessory/commemorative_stein.xml',
   root / 'dat/outfits/accessory/cyborg_feather.xml',
   root / 'dat/outfits/accessory/dv_handbook.xml',
   root / 'dat/outfits/accessory/fuzzy_dice.xml',
   root / 'dat/outfits/accessory/goatee_marker.xml',
   root / 'dat/outfits/accessory/key_chain.xml',
   root / 'dat/outfits/accessory/left_boot.xml',
   root / 'dat/outfits/accessory/love_letter.xml',
   root / 'dat/outfits/accessory/pentagram_of_valor.xml',
   root / 'dat/outfits/accessory/pilot_doll.xml',
   root / 'dat/outfits/accessory/racing_trophy.xml',
   root / 'dat/outfits/accessory/rackham_razor.xml',
   root / 'dat/outfits/accessory/sandwich_holder.xml',
   root / 'dat/outfits/accessory/satellite_mockup.xml',
   root / 'dat/outfits/accessory/star_of_valor.xml',
   root / 'dat/outfits/accessory/swamp_bombing.xml',
   root / 'dat/outfits/accessory/toy_drone.xml',
   root / 'dat/outfits/accessory/trading_card_common.xml',
   root / 'dat/outfits/accessory/trading_card_rare.xml',
   root / 'dat/outfits/accessory/trading_card_uncommon.xml',
   root / 'dat/outfits/accessory/ugly_statue.xml',
   root / 'dat/outfits/accessory/vacuum_cleaner.xml',
   root / 'dat/outfits/bioship/skills/adaptive_jump.xml',
   root / 'dat/outfits/bioship/skills/adrenal_gland_i.xml',
   root / 'dat/outfits/bioship/skills/adrenal_gland_ii.xml',
   root / 'dat/outfits/bioship/skills/adrenal_gland_iii.xml',
   root / 'dat/outfits/bioship/skills/adrenaline_hormones.xml',
   root / 'dat/outfits/bioship/skills/ambush_hunter.xml',
   root / 'dat/outfits/bioship/skills/bulky_abdomen.xml',
   root / 'dat/outfits/bioship/skills/cargo_sacs.xml',
   root / 'dat/outfits/bioship/skills/compound_eyes.xml',
   root / 'dat/outfits/bioship/skills/corrosion_i.xml',
   root / 'dat/outfits/bioship/skills/corrosion_ii.xml',
   root / 'dat/outfits/bioship/skills/crippling_plasma.xml',
   root / 'dat/outfits/bioship/skills/enhanced_smell.xml',
   root / 'dat/outfits/bioship/skills/feral_rage_i.xml',
   root / 'dat/outfits/bioship/skills/feral_rage_ii.xml',
   root / 'dat/outfits/bioship/skills/feral_rage_iii.xml',
   root / 'dat/outfits/bioship/skills/fuel_bladder.xml',
   root / 'dat/outfits/bioship/skills/hard_shell.xml',
   root / 'dat/outfits/bioship/skills/hunters_instinct.xml',
   root / 'dat/outfits/bioship/skills/natural_healing_i.xml',
   root / 'dat/outfits/bioship/skills/natural_healing_ii.xml',
   root / 'dat/outfits/bioship/skills/paralyzing_plasma.xml',
   root / 'dat/outfits/bioship/skills/plasma_burst.xml',
   root / 'dat/outfits/bioship/skills/reflective_shell.xml',
   root / 'dat/outfits/bioship/skills/silence.xml',
   root / 'dat/outfits/bioship/skills/the_bite.xml',
   root / 'dat/outfits/bioship/skills/the_bite_blood_lust.xml',
   root / 'dat/outfits/bioship/skills/the_bite_improved.xml',
   root / 'dat/outfits/bioship/skills/tracking_antennae.xml',
   root / 'dat/outfits/bioship/skills/tunnelling_organ.xml',
   root / 'dat/outfits/bioship/skills/wanderer.xml',
   root / 'dat/outfits/core_engine/dummy_engine.xml',
   root / 'dat/outfits/core_engine/large/beat_up_large_engine.xml',
   root / 'dat/outfits/core_engine/large/krain_remige_engine.xml',
   root / 'dat/outfits/core_engine/large/melendez_mammoth_xl_engine.xml',
   root / 'dat/outfits/core_engine/large/nexus_bolt_3000_engine.xml',
   root / 'dat/outfits/core_engine/large/tricon_typhoon_engine.xml',
   root / 'dat/outfits/core_engine/large/tricon_typhoon_ii_engine.xml',
   root / 'dat/outfits/core_engine/large/unicorp_eagle_6500_engine.xml',
   root / 'dat/outfits/core_engine/medium/beat_up_medium_engine.xml',
   root / 'dat/outfits/core_engine/medium/krain_patagium_engine.xml',
   root / 'dat/outfits/core_engine/medium/melendez_buffalo_xl_engine.xml',
   root / 'dat/outfits/core_engine/medium/nexus_arrow_700_engine.xml',
   root / 'dat/outfits/core_engine/medium/tricon_cyclone_engine.xml',
   root / 'dat/outfits/core_engine/medium/tricon_cyclone_ii_engine.xml',
   root / 'dat/outfits/core_engine/medium/unicorp_falcon_1300_engine.xml',
   root / 'dat/outfits/core_engine/small/beat_up_small_engine.xml',
   root / 'dat/outfits/core_engine/small/melendez_ox_xl_engine.xml',
   root / 'dat/outfits/core_engine/small/nexus_dart_160_engine.xml',
   root / 'dat/outfits/core_engine/small/tricon_zephyr_engine.xml',
   root / 'dat/outfits/core_engine/small/tricon_zephyr_ii_engine.xml',
   root / 'dat/outfits/core_engine/small/unicorp_hawk_360_engine.xml',
   root / 'dat/outfits/core_engine/small/zalek_test_engine.xml',
   root / 'dat/outfits/core_hull/dummy_plating.xml',
   root / 'dat/outfits/core_hull/large/patchwork_heavy_plating.xml',
   root / 'dat/outfits/core_hull/large/rs_large_cargo_hull.xml',
   root / 'dat/outfits/core_hull/large/sk_heavy_combat_plating.xml',
   root / 'dat/outfits/core_hull/large/sk_large_cargo_hull.xml',
   root / 'dat/outfits/core_hull/large/sk_superheavy_combat_plating.xml',
   root / 'dat/outfits/core_hull/large/unicorp_d58_heavy_plating.xml',
   root / 'dat/outfits/core_hull/large/unicorp_d72_heavy_plating.xml',
   root / 'dat/outfits/core_hull/medium/nexus_medium_stealth_plating.xml',
   root / 'dat/outfits/core_hull/medium/patchwork_medium_plating.xml',
   root / 'dat/outfits/core_hull/medium/rs_medium_cargo_hull.xml',
   root / 'dat/outfits/core_hull/medium/sk_medium_cargo_hull.xml',
   root / 'dat/outfits/core_hull/medium/sk_medium_combat_plating.xml',
   root / 'dat/outfits/core_hull/medium/sk_mediumheavy_combat_plating.xml',
   root / 'dat/outfits/core_hull/medium/unicorp_d23_medium_plating.xml',
   root / 'dat/outfits/core_hull/medium/unicorp_d38_medium_plating.xml',
   root / 'dat/outfits/core_hull/small/nexus_light_stealth_plating.xml',
   root / 'dat/outfits/core_hull/small/patchwork_light_plating.xml',
   root / 'dat/outfits/core_hull/small/rs_small_cargo_hull.xml',
   root / 'dat/outfits/core_hull/small/sk_light_combat_plating.xml',
   root / 'dat/outfits/core_hull/small/sk_small_cargo_hull.xml',
   root / 'dat/outfits/core_hull/small/sk_ultralight_combat_plating.xml',
   root / 'dat/outfits/core_hull/small/unicorp_d2_light_plating.xml',
   root / 'dat/outfits/core_hull/small/unicorp_d9_light_plating.xml',
   root / 'dat/outfits/core_system/dummy_systems.xml',
   root / 'dat/outfits/core_system/large/milspec_orion_8601_core_system.xml',
   root / 'dat/outfits/core_system/large/milspec_orion_9901_core_system.xml',
   root / 'dat/outfits/core_system/large/milspec_thalos_8502_core_system.xml',
   root / 'dat/outfits/core_system/large/milspec_thalos_9802_core_system.xml',
   root / 'dat/outfits/core_system/large/previous_generation_large_systems.xml',
   root / 'dat/outfits/core_system/large/unicorp_pt1750_core_system.xml',
   root / 'dat/outfits/core_system/large/unicorp_pt440_core_system.xml',
   root / 'dat/outfits/core_system/medium/milspec_orion_4801_core_system.xml',
   root / 'dat/outfits/core_system/medium/milspec_orion_5501_core_system.xml',
   root / 'dat/outfits/core_system/medium/milspec_thalos_4702_core_system.xml',
   root / 'dat/outfits/core_system/medium/milspec_thalos_5402_core_system.xml',
   root / 'dat/outfits/core_system/medium/previous_generation_medium_systems.xml',
   root / 'dat/outfits/core_system/medium/unicorp_pt200_core_system.xml',
   root / 'dat/outfits/core_system/medium/unicorp_pt310_core_system.xml',
   root / 'dat/outfits/core_system/small/milspec_orion_2301_core_system.xml',
   root / 'dat/outfits/core_system/small/milspec_orion_3701_core_system.xml',
   root / 'dat/outfits/core_system/small/milspec_thalos_2202_core_system.xml',
   root / 'dat/outfits/core_system/small/milspec_thalos_3602_core_system.xml',
   root / 'dat/outfits/core_system/small/previous_generation_small_systems.xml',
   root / 'dat/outfits/core_system/small/unicorp_pt16_core_system.xml',
   root / 'dat/outfits/core_system/small/unicorp_pt68_core_system.xml',
   root / 'dat/outfits/fighter_bays/drone_bay.xml',
   root / 'dat/outfits/fighter_bays/empire_lancelot_bay.xml',
   root / 'dat/outfits/fighter_bays/hyena_bay.xml',
   root / 'dat/outfits/fighter_bays/hyena_dock.xml',
   root / 'dat/outfits/fighter_bays/lancelot_bay.xml',
   root / 'dat/outfits/fighter_bays/pirate_hyena_bay.xml',
   root / 'dat/outfits/fighter_bays/pirate_hyena_dock.xml',
   root / 'dat/outfits/fighter_bays/proteron_dalton_bay.xml',
   root / 'dat/outfits/fighter_bays/proteron_dalton_dock.xml',
   root / 'dat/outfits/fighter_bays/sirius_fidelity_bay.xml',
   root / 'dat/outfits/fighter_bays/sirius_shaman_bay.xml',
   root / 'dat/outfits/fighter_bays/soromid_brigand_bay.xml',
   root / 'dat/outfits/fighter_bays/thurion_perspicacity_bay.xml',
   root / 'dat/outfits/fighter_bays/thurion_perspicacity_dock.xml',
   root / 'dat/outfits/fighter_bays/zalek_bomber_drone_bay.xml',
   root / 'dat/outfits/fighter_bays/zalek_bomber_drone_mini_bay.xml',
   root / 'dat/outfits/fighter_bays/zalek_heavy_drone_bay.xml',
   root / 'dat/outfits/fighter_bays/zalek_heavy_drone_mini_bay.xml',
   root / 'dat/outfits/fighter_bays/zalek_light_drone_bay.xml',
   root / 'dat/outfits/fighter_bays/zalek_light_drone_mini_bay.xml',
   root / 'dat/outfits/flow/abilities/astral_projection.xml',
   root / 'dat/outfits/flow/abilities/avatar_of_sirichana.xml',
   root / 'dat/outfits/flow/abilities/cleansing_flames.xml',
   root / 'dat/outfits/flow/abilities/feather_drive.xml',
   root / 'dat/outfits/flow/abilities/house_of_mirrors.xml',
   root / 'dat/outfits/flow/abilities/reality_rip.xml',
   root / 'dat/outfits/flow/abilities/seeking_chakra.xml',
   root / 'dat/outfits/flow/abilities/seeking_chakra_large.xml',
   root / 'dat/outfits/flow/abilities/seeking_chakra_medium.xml',
   root / 'dat/outfits/flow/abilities/seeking_chakra_small.xml',
   root / 'dat/outfits/flow/astral_flow_amplifier.xml',
   root / 'dat/outfits/flow/astral_projection/astral_cannon.xml',
   root / 'dat/outfits/flow/astral_projection/greater_astral_cannon.xml',
   root / 'dat/outfits/flow/astral_projection/lesser_astral_cannon.xml',
   root / 'dat/outfits/flow/internal_flow_amplifier.xml',
   root / 'dat/outfits/flow/structure/large_flow_amplifier.xml',
   root / 'dat/outfits/flow/structure/large_flow_resonator.xml',
   root / 'dat/outfits/flow/structure/large_meditation_chamber.xml',
   root / 'dat/outfits/flow/structure/medium_flow_amplifier.xml',
   root / 'dat/outfits/flow/structure/medium_flow_resonator.xml',
   root / 'dat/outfits/flow/structure/medium_meditation_chamber.xml',
   root / 'dat/outfits/flow/structure/small_flow_amplifier.xml',
   root / 'dat/outfits/flow/structure/small_flow_resonator.xml',
   root / 'dat/outfits/flow/structure/small_meditation_chamber.xml',
   root / 'dat/outfits/intrinsic/black_agate_finishing.xml',
   root / 'dat/outfits/intrinsic/gauntlet_deluxe.xml',
   root / 'dat/outfits/intrinsic/gauntlet_supreme.xml',
   root / 'dat/outfits/intrinsic/machiavellian_fortune.xml',
   root / 'dat/outfits/intrinsic/machiavellian_necessity.xml',
   root / 'dat/outfits/intrinsic/machiavellian_virtue.xml',
   root / 'dat/outfits/intrinsic/port_and_polish.xml',
   root / 'dat/outfits/intrinsic/wild_space_taint.xml',
   root / 'dat/outfits/launchers/convulsion_launcher.xml',
   root / 'dat/outfits/launchers/electron_burst_cannon.xml',
   root / 'dat/outfits/launchers/emp_grenade_launcher.xml',
   root / 'dat/outfits/launchers/enygma_systems_huntsman_launcher.xml',
   root / 'dat/outfits/launchers/enygma_systems_spearhead_launcher.xml',
   root / 'dat/outfits/launchers/enygma_systems_turreted_fury_launcher.xml',
   root / 'dat/outfits/launchers/enygma_systems_turreted_headhunter_launcher.xml',
   root / 'dat/outfits/launchers/repeating_banshee_launcher.xml',
   root / 'dat/outfits/launchers/shatterer_launcher.xml',
   root / 'dat/outfits/launchers/space_mine_layer.xml',
   root / 'dat/outfits/launchers/superfast_collider_launcher.xml',
   root / 'dat/outfits/launchers/teracom_banshee_launcher.xml',
   root / 'dat/outfits/launchers/teracom_fury_launcher.xml',
   root / 'dat/outfits/launchers/teracom_headhunter_launcher.xml',
   root / 'dat/outfits/launchers/teracom_imperator_launcher.xml',
   root / 'dat/outfits/launchers/teracom_mace_launcher.xml',
   root / 'dat/outfits/launchers/teracom_medusa_launcher.xml',
   root / 'dat/outfits/launchers/teracom_vengeance_launcher.xml',
   root / 'dat/outfits/launchers/turreted_convulsion_launcher.xml',
   root / 'dat/outfits/launchers/unicorp_caesar_iv_launcher.xml',
   root / 'dat/outfits/launchers/unicorp_storm_launcher.xml',
   root / 'dat/outfits/launchers/zalek_hunter_launcher.xml',
   root / 'dat/outfits/launchers/zalek_reaper_launcher.xml',
   root / 'dat/outfits/maps/localmap.xml',
   root / 'dat/outfits/maps/map_collective_space.xml',
   root / 'dat/outfits/maps/map_dvaered_core.xml',
   root / 'dat/outfits/maps/map_empire_core.xml',
   root / 'dat/outfits/maps/map_empiresoromid_trade_route.xml',
   root / 'dat/outfits/maps/map_flf.xml',
   root / 'dat/outfits/maps/map_flf_pirate_route.xml',
   root / 'dat/outfits/maps/map_inner_nebula_secret_jump.xml',
   root / 'dat/outfits/maps/map_kretogg_hypergate.xml',
   root / 'dat/outfits/maps/map_kretogg_secrets.xml',
   root / 'dat/outfits/maps/map_nebula_edge.xml',
   root / 'dat/outfits/maps/map_new_haven_secrets.xml',
   root / 'dat/outfits/maps/map_pirate_strongholds.xml',
   root / 'dat/outfits/maps/map_qorel.xml',
   root / 'dat/outfits/maps/map_sirian_border_systems.xml',
   root / 'dat/outfits/maps/map_sirius_core.xml',
   root / 'dat/outfits/maps/map_sol.xml',
   root / 'dat/outfits/maps/map_the_frontier.xml',
   root / 'dat/outfits/maps/map_thurion.xml',
   root / 'dat/outfits/maps/map_zalek_core.xml',
   root / 'dat/outfits/maps/ultra_map.xml',
   root / 'dat/outfits/misc/counterfeit_heavy_combat_vessel_license.xml',
   root / 'dat/outfits/misc/counterfeit_heavy_weapon_license.xml',
   root / 'dat/outfits/misc/gui_brushed.xml',
   root / 'dat/outfits/misc/gui_legacy.xml',
   root / 'dat/outfits/misc/gui_slim.xml',
   root / 'dat/outfits/misc/gui_slimv2.xml',
   root / 'dat/outfits/misc/heavy_combat_vessel_license.xml',
   root / 'dat/outfits/misc/heavy_weapon_license.xml',
   root / 'dat/outfits/misc/large_civilian_vessel_license.xml',
   root / 'dat/outfits/misc/light_combat_vessel_license.xml',
   root / 'dat/outfits/misc/medium_combat_vessel_license.xml',
   root / 'dat/outfits/misc/medium_weapon_license.xml',
   root / 'dat/outfits/misc/mercenary_license.xml',
   root / 'dat/outfits/pointdefense/dvaered_flare_battery.xml',
   root / 'dat/outfits/pointdefense/guardian_interception_system.xml',
   root / 'dat/outfits/pointdefense/guardian_overseer_system.xml',
   root / 'dat/outfits/pointdefense/ratchet_point_defense.xml',
   root / 'dat/outfits/pointdefense/spittle_tubuloid_cluster.xml',
   root / 'dat/outfits/special/base_ripper_mk2.xml',
   root / 'dat/outfits/special/bikers_fury_launcher.xml',
   root / 'dat/outfits/special/cheaters_laser_cannon.xml',
   root / 'dat/outfits/special/cheaters_ragnarok_beam.xml',
   root / 'dat/outfits/structure/active_plating.xml',
   root / 'dat/outfits/structure/adaptive_stealth_plating.xml',
   root / 'dat/outfits/structure/auxiliary_processing_unit_i.xml',
   root / 'dat/outfits/structure/auxiliary_processing_unit_ii.xml',
   root / 'dat/outfits/structure/auxiliary_processing_unit_iii.xml',
   root / 'dat/outfits/structure/auxiliary_processing_unit_iv.xml',
   root / 'dat/outfits/structure/battery_i.xml',
   root / 'dat/outfits/structure/battery_ii.xml',
   root / 'dat/outfits/structure/battery_iii.xml',
   root / 'dat/outfits/structure/battery_iv.xml',
   root / 'dat/outfits/structure/biometal_armour.xml',
   root / 'dat/outfits/structure/engine_reroute.xml',
   root / 'dat/outfits/structure/improved_stabilizer.xml',
   root / 'dat/outfits/structure/large_cargo_pod.xml',
   root / 'dat/outfits/structure/large_fuel_pod.xml',
   root / 'dat/outfits/structure/large_shield_booster.xml',
   root / 'dat/outfits/structure/medium_cargo_pod.xml',
   root / 'dat/outfits/structure/medium_fuel_pod.xml',
   root / 'dat/outfits/structure/medium_shield_booster.xml',
   root / 'dat/outfits/structure/microbond_plating.xml',
   root / 'dat/outfits/structure/nanobond_plating.xml',
   root / 'dat/outfits/structure/nebular_shielding_prototype.xml',
   root / 'dat/outfits/structure/plasteel_plating.xml',
   root / 'dat/outfits/structure/reactor_class_i.xml',
   root / 'dat/outfits/structure/reactor_class_ii.xml',
   root / 'dat/outfits/structure/reactor_class_iii.xml',
   root / 'dat/outfits/structure/shield_capacitor_i.xml',
   root / 'dat/outfits/structure/shield_capacitor_ii.xml',
   root / 'dat/outfits/structure/shield_capacitor_iii.xml',
   root / 'dat/outfits/structure/shield_capacitor_iv.xml',
   root / 'dat/outfits/structure/small_cargo_pod.xml',
   root / 'dat/outfits/structure/small_fuel_pod.xml',
   root / 'dat/outfits/structure/small_shield_booster.xml',
   root / 'dat/outfits/unique/bioship_pheromone_emitter.xml',
   root / 'dat/outfits/unique/daphnes_leap.xml',
   root / 'dat/outfits/unique/executor_shield_aura.xml',
   root / 'dat/outfits/unique/fake_transponder.xml',
   root / 'dat/outfits/unique/fuel_recycler.xml',
   root / 'dat/outfits/unique/hades_torch.xml',
   root / 'dat/outfits/unique/homebrew_processing_unit.xml',
   root / 'dat/outfits/unique/pulse_scanner.xml',
   root / 'dat/outfits/unique/squadron_synchronizer_module.xml',
   root / 'dat/outfits/unique/valkyrie_beam.xml',
   root / 'dat/outfits/unique/veil_of_penelope.xml',
   root / 'dat/outfits/unique/zd5_guardian_unit.xml',
   root / 'dat/outfits/utility/asteroid_scanner.xml',
   root / 'dat/outfits/utility/berserk_chip.xml',
   root / 'dat/outfits/utility/blink_drive.xml',
   root / 'dat/outfits/utility/boarding_androids_mk1.xml',
   root / 'dat/outfits/utility/boarding_androids_mk2.xml',
   root / 'dat/outfits/utility/camouflage_burster.xml',
   root / 'dat/outfits/utility/catalytic_energy_drill.xml',
   root / 'dat/outfits/utility/cloaking_device.xml',
   root / 'dat/outfits/utility/combat_hologram_projector.xml',
   root / 'dat/outfits/utility/combatai/agility_combat_ai.xml',
   root / 'dat/outfits/utility/combatai/bioneural_combat_ai.xml',
   root / 'dat/outfits/utility/combatai/cyclic_combat_ai.xml',
   root / 'dat/outfits/utility/combatai/efficiency_combat_ai.xml',
   root / 'dat/outfits/utility/combatai/hive_combat_ai.xml',
   root / 'dat/outfits/utility/combatai/hunting_combat_ai.xml',
   root / 'dat/outfits/utility/combatai/pinpoint_combat_ai.xml',
   root / 'dat/outfits/utility/combatai/scanning_combat_ai.xml',
   root / 'dat/outfits/utility/cryogenic_repair_nanobots.xml',
   root / 'dat/outfits/utility/droid_repair_crew.xml',
   root / 'dat/outfits/utility/emergency_shield_booster.xml',
   root / 'dat/outfits/utility/emergency_stasis_inducer.xml',
   root / 'dat/outfits/utility/flicker_drive.xml',
   root / 'dat/outfits/utility/hellburner.xml',
   root / 'dat/outfits/utility/hidden_jump_scanner.xml',
   root / 'dat/outfits/utility/hullcoating/faraday_tempest_coating.xml',
   root / 'dat/outfits/utility/hullcoating/lattice_thermal_coating.xml',
   root / 'dat/outfits/utility/hullcoating/milspec_impactoplastic_coating.xml',
   root / 'dat/outfits/utility/hullcoating/nebula_resistant_coating.xml',
   root / 'dat/outfits/utility/hullcoating/nexus_stealth_coating.xml',
   root / 'dat/outfits/utility/hullcoating/photovoltaic_nanobot_coating.xml',
   root / 'dat/outfits/utility/hyperbolic_blink_engine.xml',
   root / 'dat/outfits/utility/jump_scanner.xml',
   root / 'dat/outfits/utility/low_radiation_sensor_modulator.xml',
   root / 'dat/outfits/utility/milspec_jammer.xml',
   root / 'dat/outfits/utility/milspec_scrambler.xml',
   root / 'dat/outfits/utility/neural_accelerator_interface.xml',
   root / 'dat/outfits/utility/sensor_array.xml',
   root / 'dat/outfits/utility/sk_heavy_plasma_drill.xml',
   root / 'dat/outfits/utility/sk_plasma_drill.xml',
   root / 'dat/outfits/utility/targeting_array.xml',
   root / 'dat/outfits/utility/targeting_conduit.xml',
   root / 'dat/outfits/utility/unicorp_jammer.xml',
   root / 'dat/outfits/utility/unicorp_light_afterburner.xml',
   root / 'dat/outfits/utility/unicorp_medium_afterburner.xml',
   root / 'dat/outfits/utility/unicorp_scrambler.xml',
   root / 'dat/outfits/utility/weakness_harmonizer_ai.xml',
   root / 'dat/outfits/utility/weapons_ionizer.xml',
   root / 'dat/outfits/weapons/antimatter_lance.xml',
   root / 'dat/outfits/weapons/disruptor_artillery_s1.xml',
   root / 'dat/outfits/weapons/disruptor_artillery_s2.xml',
   root / 'dat/outfits/weapons/disruptor_battery_s2.xml',
   root / 'dat/outfits/weapons/energy_harpoon.xml',
   root / 'dat/outfits/weapons/gauss_gun.xml',
   root / 'dat/outfits/weapons/grave_beam.xml',
   root / 'dat/outfits/weapons/grave_lance.xml',
   root / 'dat/outfits/weapons/heavy_ion_cannon.xml',
   root / 'dat/outfits/weapons/heavy_ion_turret.xml',
   root / 'dat/outfits/weapons/heavy_laser_turret.xml',
   root / 'dat/outfits/weapons/heavy_ripper_cannon.xml',
   root / 'dat/outfits/weapons/heavy_ripper_turret.xml',
   root / 'dat/outfits/weapons/ion_cannon.xml',
   root / 'dat/outfits/weapons/laser_cannon_mk1.xml',
   root / 'dat/outfits/weapons/laser_cannon_mk2.xml',
   root / 'dat/outfits/weapons/laser_turret_mk1.xml',
   root / 'dat/outfits/weapons/laser_turret_mk2.xml',
   root / 'dat/outfits/weapons/mass_driver.xml',
   root / 'dat/outfits/weapons/mining_lance_mk1.xml',
   root / 'dat/outfits/weapons/mining_lance_mk2.xml',
   root / 'dat/outfits/weapons/neutron_disruptor.xml',
   root / 'dat/outfits/weapons/neutron_disruptor_heavy.xml',
   root / 'dat/outfits/weapons/nexus_drill_lance.xml',
   root / 'dat/outfits/weapons/orion_beam.xml',
   root / 'dat/outfits/weapons/orion_lance.xml',
   root / 'dat/outfits/weapons/particle_beam.xml',
   root / 'dat/outfits/weapons/particle_lance.xml',
   root / 'dat/outfits/weapons/plasma_blaster_mk1.xml',
   root / 'dat/outfits/weapons/plasma_blaster_mk2.xml',
   root / 'dat/outfits/weapons/plasma_cannon.xml',
   root / 'dat/outfits/weapons/plasma_cluster_cannon.xml',
   root / 'dat/outfits/weapons/plasma_turret_mk1.xml',
   root / 'dat/outfits/weapons/plasma_turret_mk2.xml',
   root / 'dat/outfits/weapons/ragnarok_beam.xml',
   root / 'dat/outfits/weapons/railgun.xml',
   root / 'dat/outfits/weapons/railgun_turret.xml',
   root / 'dat/outfits/weapons/razor_artillery_s1.xml',
   root / 'dat/outfits/weapons/razor_artillery_s2.xml',
   root / 'dat/outfits/weapons/razor_artillery_s3.xml',
   root / 'dat/outfits/weapons/razor_battery_s2.xml',
   root / 'dat/outfits/weapons/repeating_railgun.xml',
   root / 'dat/outfits/weapons/ripper_cannon.xml',
   root / 'dat/outfits/weapons/shredder.xml',
   root / 'dat/outfits/weapons/turbolaser.xml',
   root / 'dat/outfits/weapons/turreted_gauss_gun.xml',
   root / 'dat/outfits/weapons/turreted_vulcan_gun.xml',
   root / 'dat/outfits/weapons/vulcan_gun.xml',
)

outfits_gen = [find_program('outfits.py'), '@INPUT@', '-o', '@OUTPUT@']
naevpedia_outfits = []
foreach ns: naevpedia_outfits_sources
  naevpedia_outfits += custom_target( ns.full_path().replace('/','_'),
      command: outfits_gen,
      input: ns,
      output: '@BASENAME@.md',
      install: true,
      install_dir: ndata_path / 'dat/naevpedia/outfits',
    )
endforeach

biolist = []
foreach bio: bio_outfits
  biolist += bio.to_list()
endforeach
foreach ns: biolist
  naevpedia_outfits += custom_target( ns.full_path().replace('/','_'),
      command: outfits_gen,
      input: ns,
      output: '@BASENAME@.md',
      install: true,
      install_dir: ndata_path / 'dat/naevpedia/outfits',
    )
endforeach
